[gd_scene load_steps=4 format=3 uid="uid://canindfokulel"]

[ext_resource type="Script" path="res://Scripts/GUI/main_menu.gd" id="1_p5drk"]
[ext_resource type="Script" path="res://Scripts/GUI/button.gd" id="2_i1r0d"]
[ext_resource type="Texture2D" uid="uid://ld4mmafa46eu" path="res://Sprites/GUI/Logo_IntoDreams.png" id="2_s6rvs"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p5drk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 337.0
offset_top = 68.0
offset_right = -337.0
offset_bottom = 249.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2

[node name="GameLogo" type="Sprite2D" parent="MarginContainer2/Panel"]
position = Vector2(234.5, 93.1185)
scale = Vector2(0.252604, 0.176145)
texture = ExtResource("2_s6rvs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -148.0
offset_right = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New game"
script = ExtResource("2_i1r0d")

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
